maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:26: error: not found: value i
    Ttraite(i) = true
            ^